--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -13617,21 +13617,29 @@ Concentric</property>
                                                   </packing>
                                                 </child>
                                                 <child>
-                                                  <widget class="GtkViewport" id="viewport_sprint">
-                                                    <property name="height_request">150</property>
+                                                  <widget class="GtkScrolledWindow" id="scrolledwindow4">
                                                     <property name="visible">True</property>
-                                                    <property name="can_focus">False</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="hscrollbar_policy">automatic</property>
+                                                    <property name="vscrollbar_policy">automatic</property>
                                                     <child>
-                                                      <widget class="GtkImage" id="image_sprint">
+                                                      <widget class="GtkViewport" id="viewport_sprint">
+                                                        <property name="height_request">150</property>
                                                         <property name="visible">True</property>
                                                         <property name="can_focus">False</property>
-                                                        <property name="stock">gtk-missing-image</property>
+                                                        <child>
+                                                          <widget class="GtkImage" id="image_sprint">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="stock">gtk-missing-image</property>
+                                                          </widget>
+                                                        </child>
                                                       </widget>
                                                     </child>
                                                   </widget>
                                                   <packing>
                                                     <property name="resize">True</property>
-                                                    <property name="shrink">False</property>
+                                                    <property name="shrink">True</property>
                                                   </packing>
                                                 </child>
                                               </widget>
@@ -18979,6 +18987,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
